--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,35 @@
-name: todo_app
+name: nolan_todo
 description: todo app using riverpod
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
   flutter_hooks: ^0.18.1
-  hooks_riverpod: ^1.0.0
-  shared_preferences: ^2.0.9
+  flutter_slidable: ^3.0.0
+  flutter_slider_drawer: ^2.1.3
+  freezed_annotation:
+  go_router: ^7.1.1
+  hooks_riverpod:
+  shared_preferences:
+  riverpod_annotation:
+  json_annotation:
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
+  custom_lint:
+  riverpod_generator:
+  freezed:
+  riverpod_lint:
+  json_serializable:
 
 flutter:
   uses-material-design: true
